--- a/week7/随堂笔记1.ipynb
+++ b/week7/随堂笔记1.ipynb
@@ -1,10 +1,130 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "本节课主要学习了CTR预估算法中的GBDT+LR模型、wide&deep模型以及NFM模型的背景和原理"
+    "GBDT+LR的原理\n",
+    "\n",
+    "Gradient Boosting原理\n",
+    "\n",
+    "使用GBDT进行新特征构造\n",
+    "\n",
+    "评价指标NE，Calibration，AUC\n",
+    "\n",
+    "TPRate，FPRate计算\n",
+    "\n",
+    "sklearn中的GBDT\n",
+    "\n",
+    "Wide & Deep模型\n",
+    "\n",
+    "Wide join Deep同时训练\n",
+    "\n",
+    "DeepCTR中的WDL\n",
+    "\n",
+    "FNN模型\n",
+    "\n",
+    "NFM模型\n",
+    "\n",
+    "FM与DNN的两种结合方式：DeepFM，NFM\n",
+    "\n",
+    "DeepCTR中的NFM\n",
+    "\n",
+    "基于流行度的推荐算法\n",
+    "\n",
+    "影响流行度的因素\n",
+    "\n",
+    "推荐系统的架构\n",
+    "\n",
+    "FM与MF回顾\n",
+    "\n",
+    "GBDT+LR模型\n",
+    "\n",
+    "Wide & Deep模型\n",
+    "\n",
+    "NFM算法\n",
+    "\n",
+    "Review学习过的CTR模型\n",
+    "\n",
+    "工具：DeepCTR\n",
+    "\n",
+    "使用GBDT+LR对8万个样本进行分类预测\n",
+    "\n",
+    "使用WDL，NFM对Movielens进行推荐\n",
+    "\n",
+    "\n",
+    "认知流行度\n",
+    "\n",
+    "MovieLens中的流行度分析\n",
+    "\n",
+    "基于流行度的推荐（冷启动，个性化推荐）\n",
+    "\n",
+    "如何使用流行度这个指标\n",
+    "\n",
+    "简单有效/个性复杂\n",
+    "\n",
+    "推荐系统的架构\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "课堂笔记\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "逻辑回归和线性回归的联系\n",
+    "\n",
+    "由于逻辑回归通过singomod函数可以将线性值映射到(0,1)之间，然后通过阈值做分箱处理，将值变成0和1\n",
+    "\n",
+    "LR需要做大量的特征工程，因为容易欠拟合，因为样本数量很多，需要的特征工程也多，但是由于数据是稀疏矩阵，特征工程在实际中并不充分，而特征工程方法对人的成本要求高，时间成本要求也高，所以需要机器自动分类\n",
+    "\n",
+    "GBDT是使用多棵树来完成，通过迭代树的残差来实现预测（梯度提升树：第一科学习后的结果，第二课学习）它会修改原来样本的数据，残差概念：（预测值-实际值）\n",
+    "cat是传统决策树完成的，是一棵大树\n",
+    "adboost是样本分布原理，第一棵树学完后，第二部分学习样本错误的部分权重提高并重新学，它也是多棵树组成的\n",
+    "XGBOOST与GBDT区别是学习方法不一样，第一，GBDT将目标函数泰勒展开到一阶，而xgboost将目标函数泰勒展开到了二阶。保留了更多有关目标函数的信息，对提升效果有帮助。第二，GBDT是给新的基模型寻找新的拟合标签（前面加法模型的负梯度），而xgboost是给新的基模型寻找新的目标函数（目标函数关于新的基模型的二阶泰勒展开）。第三，xgboost加入了和叶子权重的L2正则化项，因而有利于模型获得更低的方差。第四，xgboost增加了自动处理缺失值特征的策略。通过把带缺失值样本分别划分到左子树或者右子树，比较两种方案下目标函数的优劣，从而自动对有缺失值的样本进行划分，无需对缺失特征进行填充预处理此外，xgboost还支持候选分位点切割，特征并行等，可以提升性能。\n",
+    "\n",
+    "\n",
+    "\n",
+    "GBDT max_dep默认值为3  xgbost树的深度一般会设置7-9 为什么？ xgbost不加入正则画像容易过拟合\n",
+    "\n",
+    "\n",
+    "boosting 串行\n",
+    "\n",
+    "badding 并行\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "wide&deep\n",
+    "wide 是 代表记忆  LR\n",
+    "deep  推理能力  \n",
+    "与 deepFM区别\n",
+    "\n",
+    "\n",
+    "deepFM原理\n",
+    "\n",
+    "NFM原理\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "本节课主要学习了CTR预估算法中的GBDT+LR模型、wide&deep模型的原理和背景"
    ]
   },
   {
