--- a/week7/作业.ipynb
+++ b/week7/作业.ipynb
@@ -121,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-12-24T12:08:42.013880Z",
-     "start_time": "2020-12-24T12:08:40.637353Z"
+     "end_time": "2020-12-24T12:10:03.177373Z",
+     "start_time": "2020-12-24T12:10:01.794024Z"
     }
    },
    "outputs": [
@@ -133,48 +133,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step - loss: 14.7499 - mse: 14.7499 - val_loss: 13.1163 - val_mse: 13.1163\n",
-      "['rating'] [[2]\n",
-      " [4]\n",
-      " [2]\n",
-      " [4]\n",
-      " [3]\n",
-      " [3]\n",
-      " [5]\n",
-      " [4]\n",
-      " [5]\n",
-      " [2]\n",
-      " [4]\n",
-      " [3]\n",
-      " [4]\n",
-      " [2]\n",
-      " [3]\n",
-      " [3]\n",
-      " [2]\n",
-      " [2]\n",
-      " [3]\n",
-      " [3]\n",
-      " [5]\n",
-      " [3]\n",
-      " [5]\n",
-      " [3]\n",
-      " [1]\n",
-      " [3]\n",
-      " [4]\n",
-      " [5]\n",
-      " [4]\n",
-      " [4]\n",
-      " [3]\n",
-      " [4]\n",
-      " [5]\n",
-      " [2]\n",
-      " [2]\n",
-      " [4]\n",
-      " [5]\n",
-      " [5]\n",
-      " [4]\n",
-      " [3]]\n",
-      "test RMSE 3.5810752575169373\n"
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_train_function.<locals>.train_function at 0x7fb97ee34c10> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - ETA: 0s - loss: 14.0700 - mse: 14.0700WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_test_function.<locals>.test_function at 0x7fb98175ae50> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "1/1 [==============================] - 1s 1s/step - loss: 14.0700 - mse: 14.0700 - val_loss: 15.3169 - val_mse: 15.3169\n",
+      "WARNING:tensorflow:5 out of the last 5 calls to <function Model.make_predict_function.<locals>.predict_function at 0x7fb961d68310> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has experimental_relax_shapes=True option that relaxes argument shapes that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
+      "test RMSE 3.635106600912826\n"
      ]
     }
    ],
@@ -216,7 +179,6 @@
     "history = model.fit(train_model_input, train[target].values, batch_size=256, epochs=1, verbose=True, validation_split=0.2, )\n",
     "# 使用WDL进行预测\n",
     "pred_ans = model.predict(test_model_input, batch_size=256)\n",
-    "print(target,test[target].values)\n",
     "# 输出RMSE或MSE\n",
     "mse = round(mean_squared_error(test[target].values, pred_ans), 4)\n",
     "rmse = mse ** 0.5\n",
